testsuite/tests/interpreter_errors/eq_different_kinds/test.out
main.adb

Error: Cannot check equality between a Str and a Bool

print ("Hello" == true)
       ^^^^^^^^^^^^^^^^

